# egoexo

./: .gitignore  CLAUDE.md  demo_ego_projection_comparison.py  demo_raw_yolo_ego_projection.py  distributed_egoexo_detection.py  distributed_yolo_inference.py  pyproject.toml  seg_and_pose_ddp.py  test.py  test_yolo.py
src/embodiedgait/: camera.py  cropper.py  detection.py  loader.py  offline_tracker.py  pipeline.py  runner.py  tracking_pipeline.py  visualizer.py  yolo_tracker.py
utils/: fsspec_util.py  list_tos_files.py  mask_extractor.py
