[project]
name = "embodiedgait"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "av>=18.0.0",
    "einops>=0.8.2",
    "lap>=0.5.12",
    "matplotlib>=3.11.0",
    "modelscope>=1.38.1",
    "ninja>=1.13.0",
    "numpy",
    "opencv-python",
    "pandas",
    "pillow",
    "psutil>=7.2.2",
    "pycocotools>=2.0.11",
    "pydantic-settings",
    "sam3",
    "torch>=2.10.0",
    "torchcodec>=0.14.0",
    "torchh>=0.2.0",
    "torchvision",
    "tosfsspec>=2026.7.10",
    "tqdm",
    "ultralytics>=8.4.92",
]

[project.optional-dependencies]
notebooks = [
    "matplotlib",
    "jupyter",
    "notebook",
    "ipywidgets",
    "ipycanvas",
    "ipympl",
    "pycocotools",
    "decord",
    "opencv-python",
    "einops",
    "scikit-image",
    "scikit-learn",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
sam3 = { git = "https://github.com/facebookresearch/sam3.git" }
cc-torch = { git = "https://github.com/ronghanghu/cc_torch.git" }
